--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "react-hook-form": "^7.0.4",
     "react-router-dom": "^5.2.0",
     "uuidv4": "^6.2.7"
   },
